--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,46 +1,43 @@
-name: GitHubPagesForGAP
-version: 0.2
-date: 04/02/2017
-description: A GitHub Pages generator for GAP packages
+name: SCSCP
+version: 2.2.0
+date: 06/02/2017
+description: Symbolic Computation Software Composability Protocol in GAP
 
 authors:
-    - name: Max Horn
-      url: http://www.quendi.de/math
-    - name: A. U. Thor
+    - name: Alexander Konovalov
+      url: http://www.cs.st-andrews.ac.uk/~alexk/
+    - name: Steve Linton
+      url: http://www.cs.st-and.ac.uk/~sal/
 
 maintainers:
-    - name: Max Horn
-      url: http://www.quendi.de/math
-    - name: Jan Itor
+    - name: Alexander Konovalov
+      url: http://www.cs.st-andrews.ac.uk/~alexk/
+    - name: Steve Linton
+      url: http://www.cs.st-and.ac.uk/~sal/
 
-GAP: ">=4.8.1"
+GAP: ">=4.8.2"
 
 needed-pkgs:
     - name: "GAPDoc"
-      version: ">= 1.2"
+      version: ">= 1.5"
       url: "http://www.math.rwth-aachen.de/~Frank.Luebeck/GAPDoc"
+    - name: "openmath"
+      version: ">= 11.4.0"
+      url: "https://gap-packages.github.io/openmath"
     - name: "IO"
-      version: ">= 4.1"
+      version: ">= 4.4"
       url: "https://gap-packages.github.io/io"
 
-suggested-pkgs:
-    - name: "orb"
-      version: ">= 4.2"
-      url: "https://gap-packages.github.io/orb"
-
-www: http://fingolfin.github.io/GitHubPagesForGAP/
-readme: README.md
-packageinfo: http://fingolfin.github.io/GitHubPagesForGAP/PackageInfo.g
-github: https://github.com/fingolfin/GitHubPagesForGAP
+www: https://gap-packages.github.io/scscp
+readme: README
+packageinfo: https://gap-packages.github.io/scscp/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/fingolfin/GitHubPagesForGAP/releases/download/v0.2/GitHubPagesForGAP-0.2.tar.gz
-    - name: .tar.bz2
-      url: https://github.com/fingolfin/GitHubPagesForGAP/releases/download/v0.2/GitHubPagesForGAP-0.2.tar.bz2
+      url: https://github.com/gap-packages/scscp/releases/download/v2.2.0/SCSCP-2.2.0.tar.gz
 
-abstract: This is a pseudo package that contains no actual  <span class="pkgname">GAP</span> code. Instead, it is a template for other  GAP packages that allows to quickly setup GitHub Pages.
+abstract: This package implements the <a href="http://www.symbolic-computing.org/scscp">Symbolic Computation Software Composability Protocol</a> for the GAP system.
 
-status: other
+status: accepted
 doc-html: doc/chap0.html
 doc-pdf: doc/manual.pdf
