Update website for SCSCP 2.2.0

--- a/_data/package.yml
+++ b/_data/package.yml
@@ -29,7 +29,7 @@ needed-pkgs:
       url: "https://gap-packages.github.io/io"
 
 www: https://gap-packages.github.io/scscp
-readme: README
+readme: README.md
 packageinfo: https://gap-packages.github.io/scscp/PackageInfo.g
 
 downloads:
