--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ matrix:
           - g++-multilib
     - env: GAPBRANCH=stable-4.9
     - env: GAPBRANCH=stable-4.10
+    - env: GAPBRANCH=stable-4.11
 
 branches:
   only:
