--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,5 +1,6 @@
 name: SCSCP
-version: 2.4.2
+version: "2.4.2"
+license: "GPL-2.0-or-later"
 date: 2024-01-31
 description: |
     Symbolic Computation Software Composability Protocol in GAP
@@ -45,3 +46,32 @@ abstract: |
 status: accepted
 doc-html: doc/chap0_mj.html
 doc-pdf: doc/manual.pdf
+keywords: |
+    SCSCP, software composability, interface, parallel computing, OpenMath.
+citeas: |
+    <p class='BibEntry'>
+    [<span class='BibKey'>KLT24</span>]   <b class='BibAuthor'>Konovalov, O., Linton, S. and GAP Team, T.</b>,
+     <i class='BibTitle'>SCSCP, Symbolic Computation Software Composability Protocol in GAP,
+             Version 2.4.2</i>
+     (<span class='BibYear'>2024</span>)<br />
+    (<span class='BibNote'>Refereed GAP package</span>),
+    <span class='BibHowpublished'><a href="https://gap-packages.github.io/scscp">https://gap-packages.github.io/scscp</a></span>.
+    </p>
+    
+
+bibtex: |
+    @misc{ SCSCP2.4.2,
+      author =           {Konovalov, O. and Linton, S. and GAP Team, T.},
+      title =            {{SCSCP},  Symbolic  Computation Software Composability
+                          Protocol in GAP, {V}ersion 2.4.2},
+      month =            {Jan},
+      year =             {2024},
+      note =             {Refereed GAP package},
+      howpublished =     {\href           {https://gap-packages.github.io/scscp}
+                          {\texttt{https://gap-packages.github.io/}\discretionary
+                          {}{}{}\texttt{scscp}}},
+      keywords =         {SCSCP;  software  composability;  interface;  parallel
+                          computing; OpenMath},
+      printedkey =       {KLT24}
+    }
+
