--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,6 +25,7 @@ jobs:
       matrix:
         gap-branch:
           - master
+          - stable-4.13
           - stable-4.12
           - stable-4.11
           - stable-4.10
@@ -46,6 +47,10 @@ jobs:
       - uses: gap-actions/run-pkg-tests@v2
         with:
           GAP_TESTFILE: "tst/testall.g"
+      - uses: gap-actions/run-pkg-tests@v2
+        with:
+          GAP_TESTFILE: "tst/testall.g"
+          only-needed: true
       - name: "Stop SCSCP servers"
         run: |
            gap shutdown.g
