--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,7 +1,7 @@
 name: SCSCP
-version: "2.4.2"
+version: "2.4.3"
 license: "GPL-2.0-or-later"
-date: 2024-01-31
+date: 2024-07-07
 description: |
     Symbolic Computation Software Composability Protocol in GAP
 
@@ -24,7 +24,7 @@ GAP: ">=4.10"
 needed-pkgs:
     - name: "GAPDoc"
       version: ">= 1.5"
-      url: "http://www.math.rwth-aachen.de/~Frank.Luebeck/GAPDoc"
+      url: "https://www.math.rwth-aachen.de/~Frank.Luebeck/GAPDoc"
     - name: "openmath"
       version: ">= 11.4.1"
       url: "https://gap-packages.github.io/openmath"
@@ -38,7 +38,7 @@ packageinfo: https://gap-packages.github.io/scscp/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-packages/scscp/releases/download/v2.4.2/SCSCP-2.4.2.tar.gz
+      url: https://github.com/gap-packages/scscp/releases/download/v2.4.3/SCSCP-2.4.3.tar.gz
 
 abstract: |
     This package implements the <a href="https://www.openmath.org/standard/scscp/">Symbolic Computation Software Composability Protocol</a> for the GAP system.
@@ -52,23 +52,23 @@ citeas: |
     <p class='BibEntry'>
     [<span class='BibKey'>KLT24</span>]   <b class='BibAuthor'>Konovalov, O., Linton, S. and GAP Team, T.</b>,
      <i class='BibTitle'>SCSCP, Symbolic Computation Software Composability Protocol in GAP,
-             Version 2.4.2</i>
+             Version 2.4.3</i>
      (<span class='BibYear'>2024</span>)<br />
-    (<span class='BibNote'>Refereed GAP package</span>),
+    (<span class='BibNote'>GAP package</span>),
     <span class='BibHowpublished'><a href="https://gap-packages.github.io/scscp">https://gap-packages.github.io/scscp</a></span>.
     </p>
     
 
 bibtex: |
-    @misc{ SCSCP2.4.2,
+    @misc{ SCSCP,
       author =           {Konovalov, O. and Linton, S. and GAP Team, T.},
       title =            {{SCSCP},  Symbolic  Computation Software Composability
-                          Protocol in GAP, {V}ersion 2.4.2},
-      month =            {Jan},
+                          Protocol in GAP, {V}ersion 2.4.3},
+      month =            {Jul},
       year =             {2024},
-      note =             {Refereed GAP package},
+      note =             {GAP package},
       howpublished =     {\href           {https://gap-packages.github.io/scscp}
-                          {\texttt{https://gap-packages.github.io/}\discretionary
+                          {\texttt{https://gap\texttt{\symbol{45}}packages.github.io/}\discretionary
                           {}{}{}\texttt{scscp}}},
       keywords =         {SCSCP;  software  composability;  interface;  parallel
                           computing; OpenMath},
